feat: padronização de título/espaçamento e fix de alta precisão no alinhamento do PDF

--- a/catalogo.html
+++ b/catalogo.html
@@ -55,7 +55,7 @@
 
   <main class="page">
 
-    <h1>Catálogo de Etiquetas</h1>
+    <h1>Catálogo de etiquetas escolares</h1>
 
     <p class="note">
       Use os filtros abaixo para explorar.
